--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-		<script defer src="options.js"></script>
+		<script defer src="notes.js"></script>
 	</head>
 
 	<body>
