--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 	<head>
-		<meta charset="utf-8">
-    		<meta name="viewport" content="width=device-width, initial-scale=1">
-    		<title>Notes</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Notes</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
 
 		<script defer src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
@@ -16,37 +16,38 @@
 
 	<body>
 		<section class="section">
-		<div id="app" class="container">
-			<h1 class="title">
+			<div id="app" class="container">
+				<h1 class="title">
                 	Notes
-            		</h1>
-			<template v-for='field of Object.keys(plain)'>
-				<div class="field">
-					<label class="label">{{ plain[field].label }}</label>
-					<div class="control">
-						<input v-if="plain[field].type != 'textarea'" v-model="plain[field].value" class="input" v-bind:type="plain[field].type" v-bind:placeholder="plain[field].label" />
-						<textarea v-else v-model="plain[field].value" class="textarea" v-bind:placeholder="plain[field].label"></textarea>
-					</div>
-				</div>
-			</template>
-
-			<div v-if="password && isPasswordCorrect">
-				<template v-for='field of Object.keys(encrypted)'>
-					<div class="field is-grouped">
-						<label class="label">{{ encrypted[field].label }}</label>
-						<a class="delete" style="margin:0 0 0 5px" v-on:click="remove(field)"></a>
-					</div>
-					<div class="field has-addons">
-						<div class="control is-expanded">
-							<input v-model="encrypted[field].value" class="input" v-bind:type="encrypted[field].type" v-bind:placeholder="encrypted[field].label" />
-						</div>
+				</h1>
+				<template v-for='field of Object.keys(plain)'>
+					<div class="field">
+						<label class="label">{{ plain[field].label }}</label>
 						<div class="control">
-							<a v-if="encrypted[field].type == 'link'" v-bind:href="encrypted[field].value" target="_blank" class="button is-info">Go</a>
-							<a v-else class="button is-info" v-on:click="copy(encrypted[field].value)">Copy</a>
+							<input v-if="plain[field].type != 'textarea'" v-model="plain[field].value" class="input" v-bind:type="plain[field].type" v-bind:placeholder="plain[field].label" />
+							<textarea v-else v-model="plain[field].value" class="textarea" v-bind:placeholder="plain[field].label"></textarea>
 						</div>
 					</div>
 				</template>
-				<div class="field is-grouped">
+
+				<div v-if="password && isPasswordCorrect">
+					<template v-for='field of Object.keys(encrypted)'>
+						<div class="field is-grouped">
+							<label class="label">{{ encrypted[field].label }}</label>
+							<a class="delete" style="margin:0 0 0 5px" v-on:click="remove(field)"></a>
+						</div>
+						<div class="field has-addons">
+							<div class="control is-expanded">
+								<input v-model="encrypted[field].value" class="input" v-bind:type="encrypted[field].type" v-bind:placeholder="encrypted[field].label" />
+							</div>
+							<div class="control">
+								<a v-if="encrypted[field].type == 'link'" v-bind:href="encrypted[field].value" target="_blank" class="button is-info">Go</a>
+								<a v-else class="button is-info" v-on:click="copy(encrypted[field].value)">Copy</a>
+							</div>
+						</div>
+					</template>
+				</div>
+				<div v-if="plain['jsonStorage'].value" class="field is-grouped">
 					<div class="control">
 						<button class="button" v-on:click="save()">Save</button>
 					</div>
@@ -58,8 +59,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
 		</section>
 	</body>
-	
+
 </html>
+
