--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 	<title>Home</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-tooltip@3.0.2/dist/css/bulma-tooltip.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+		integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<script defer src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/howler@2.2.1/dist/howler.min.js"></script>
+	<script defer src="https://friconix.com/cdn/friconix.js"> </script>
 	<script defer src="app.js"></script>
 </head>
 
@@ -21,8 +26,10 @@
 			<div class="tabs">
 				<ul>
 					<li v-bind:class="isActive('news')" v-on:click="selectedTab = 'news'"><a>News</a></li>
-					<li v-bind:class="isActive('bookmarks')" v-on:click="selectedTab = 'bookmarks'"><a>Bookmars</a></li>
+					<li v-bind:class="isActive('bookmarks')" v-on:click="selectedTab = 'bookmarks'"><a>Bookmarks</a>
+					</li>
 					<li v-bind:class="isActive('notes')" v-on:click="selectedTab = 'notes'"><a>Notes</a></li>
+					<li v-bind:class="isActive('radio')" v-on:click="selectedTab = 'radio'"><a>Radio</a></li>
 					<li v-bind:class="isActive('settings')" v-on:click="selectedTab = 'settings'"><a>Settings</a></li>
 				</ul>
 			</div>
@@ -96,6 +103,36 @@
 						</div>
 					</template>
 				</div>
+			</div>
+
+			<div v-if="selectedTab === 'radio'">
+				<div class="columns">
+					<div class="column is-half">
+						<input class="input" placeholder="Category" v-model="newRadio.category">
+					</div>
+				</div>
+				<div class="columns">
+					<div class="column is-half">
+						<input class="input" placeholder="Name" v-model="newRadio.name" />
+					</div>
+				</div>
+				<div class="columns">
+					<div class="column">
+						<input class="input" type="url" placeholder="Insert radio URL" v-model="newRadio.url">
+					</div>
+					<div class="column">
+						<button class="button" v-on:click="addRadio()">New</button>
+					</div>
+				</div>
+				<ul id="radios" v-for="(item, index) in radio">
+					<li>
+						<a class="fas fa-times" v-on:click="deleteRadio(index)"></a>
+						<span class="has-tooltip-bottom" v-bind:data-tooltip="item.category">{{
+							item.name ? item.name : item.url }}</span>
+						<a class="fas fa-play" v-if="!item.playing && !playing" v-on:click="playRadio(index)"></a>
+						<a class="fas fa-stop" v-if="item.playing" v-on:click="stopRadio(index)"></a>
+					</li>
+				</ul>
 			</div>
 
 			<div v-if="selectedTab === 'settings'">
