--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/howler@2.2.1/dist/howler.min.js"></script>
-	<script defer src="https://friconix.com/cdn/friconix.js"> </script>
+	<script defer src="https://alcdn.msauth.net/browser/2.18.0/js/msal-browser.min.js"></script>
 	<script defer src="app.js"></script>
 </head>
 
