--- a/index.html
+++ b/index.html
@@ -136,14 +136,7 @@
 			</div>
 
 			<div v-if="selectedTab === 'settings'">
-				<div class="field is-grouped" v-if="settings['jsonStorage'].value">
-					<div class="control">
-						<input class="input" type="text" placeholder="Username" v-model="storageUser">
-					</div>
-					<div class="control">
-						<input class="input" type="password" placeholder="Password" v-model="storagePassword">
-					</div>
-
+				<div class="field is-grouped">
 					<div class="control">
 						<button class="button" v-on:click="save()">Save to remote</button>
 					</div>
