--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<script defer src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-	<script defer src="http://bitwiseshiftleft.github.io/sjcl/sjcl.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/sjcl@1.0.8/sjcl.min.js"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/howler@2.2.1/dist/howler.min.js"></script>
 	<script defer src="https://alcdn.msauth.net/browser/2.18.0/js/msal-browser.min.js"></script>
